Fixing spacing

--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -92,7 +92,7 @@ body {
 
     h2 {
       margin: 0;
-      padding: 20px 0;
+      padding: 20px 0 0 0;
     }
 
     h3 {
